--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -57,6 +57,10 @@
             <li>
 <%= link_to 'ログイン', login_path %>
 </li>
+
+<%= link_to new_item_path do %>
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                アイテムを追加
           
 <% end %>
 
