--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,42 +14,44 @@
         <ul class="nav navbar-nav navbar-right">
           
 <% if logged_in? %>
-
-            <li>
-              <a href="#">
+  <li>
+              <%= link_to new_item_path do %>
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 アイテムを追加
-                </a>
+              <% end %>
             </li>
+            
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
+                ランキング
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Wantランキング', rankings_want_path %></li>
+              </ul>
+            </li>
+
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <span class="gravatar">
-                  <img src="
-<%= gravatar_url(current_user, size: 20) %>
-" alt="" class="img-circle">
+                  <img src="<%= gravatar_url(current_user, size: 20) %>" alt="" class="img-circle">
                 </span>
-                
-<%= current_user.name %>
-
+                <%= current_user.name %>
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  
-<%= link_to 'マイページ', user_path(current_user) %>
-
+                  <%= link_to 'マイページ', user_path(current_user) %>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li>
-                    <li>
-<%= link_to 'ログアウト', logout_path, method: :delete %>
-</li>
+                  <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
                 </li>
               </ul>
             </li>
-          
-<% else %>
+          <% else %>
 
             <li>
 <%= link_to '新規登録', signup_path %>
